# ilovemyVA

./: .dockerignore  .env.example  .gitignore  BOT.md  Dockerfile  EDGES_LOG.md  PRODUCT_SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  test_endpoints.sh  test_mw.py  verify_bot_injection.py
bot/: callbacks.py  config.py  main.py  strings.py  tenant.py  test_bot_attr.py  test_dp_attr.py
bot/agents/: antigravity_client.py  gemini_client.py  schemas.py
bot/keyboards/: __init__.py  admin_kb.py  broadcast_kb.py  bucket_kb.py  confirm_kb.py  draft_kb.py  faq_kb.py  item_actions_kb.py  menu_kb.py  moderation_kb.py  pagination_kb.py  persona_kb.py  schedule_kb.py  settings_kb.py  user_mgmt_kb.py
bot/middlewares/: __init__.py  auth.py  db_session.py  error_handler.py  logging_mw.py  rate_limit.py  scheduler_mw.py  tenant.py
bot/models/: __init__.py  audit_log.py  bot_user.py  broadcast_log.py  connected_chat.py  content_item.py  faq_entry.py  group_settings.py  moderation_event.py  persona.py  rate_limit.py  storage_record.py  user_warning.py  welcome_config.py
bot/routers/: __init__.py  admin.py  automod.py  broadcast.py  buckets.py  chat_tracker.py  drafting.py  editing.py  faq.py  group_admin.py  menu.py  moderation.py  onboarding.py  persona.py  scheduling.py  settings.py  user_management.py  welcome_config.py
bot/scheduler/: __init__.py  jobs.py  setup.py
bot/services/: __init__.py  agent_service.py  broadcast_service.py  (+12 more)
database/: __init__.py  base.py  session.py
migrations/: env.py
scratch/: validator.py
static/: editor.html
(+26 files in other folders)
